# neural-network-demo

./: .gitignore  App.cpp  App.h  CMakeLists.txt  GLUtils.cpp  GeometryUtils.cpp  GeometryUtils.h  Input.cpp  Input.h  Object2D.h  README.md  ShaderProgram.cpp  ShaderProgram.h  TriangleMesh.cpp  build_all.sh  build_wasm.sh  imgui.ini  main.cpp  serve_wasm.sh
docs/: NEURAL_NET_MATH.md  SHADERS_AND_GPU_PIPELINE.md
include/core/: App.h  ControlPanel.h  DataPoint.h  DatasetGenerator.h  FieldVisualizer.h  GeometryUtils.h  Input.h  NetworkVisualizer.h  Optimizer.h  PlotGeometry.h  Scene.h  ToyNet.h  Trainer.h  WasmScene.h
include/render/: GLUtils.h  ShaderProgram.h  TriangleMesh.h
shaders/: basic.frag  basic.vert  basic_es.frag  basic_es.vert  field.frag  field.vert  field_es.frag  grid.vert  grid_es.frag  grid_es.vert  point.frag  point.vert  point_es.frag
src/core/: App.cpp  ControlPanel.cpp  DatasetGenerator.cpp  FieldVisualizer.cpp  GeometryUtils.cpp  Input.cpp  NetworkVisualizer.cpp  Optimizer.cpp  PlotGeometry.cpp  Scene.cpp  ToyNet.cpp  Trainer.cpp  WasmApi.cpp
src/render/: GLUtils.cpp  ShaderProgram.cpp  TriangleMesh.cpp
